--- a/H2_M1/templates/about.html
+++ b/H2_M1/templates/about.html
@@ -3,8 +3,9 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
+      <br>
       <h3>Introduction:</h3>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium officia quos nobis, sequi vitae dolorum doloremque fugiat, dignissimos, cumque nesciunt consequuntur animi fuga ab perferendis suscipit sit modi provident. Animi.</p>
+      <p>Image to Poem Generator.</p>
     </div>
   </div>
 </div>
