--- a/H2_M1/templates/base.html
+++ b/H2_M1/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Change the name of the App -->
-    <title>AI4DM-Flask Template Example</title>
+    <title>AI4DM-H2_M1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
     <!-- Change the favicon based on the app -->
@@ -14,7 +14,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
     <!-- If you are using ML5 this is where its imported -->
-    <script src="https://unpkg.com/ml5@1/dist/ml5.js"></script>  
+    <!-- <script src="https://unpkg.com/ml5@1/dist/ml5.js"></script>   -->
+    <script src="https://cdn.jsdelivr.net/gh/IDMNYU/p5.js-speech@0.0.3/lib/p5.speech.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
